# cloud-native-asset-management-system

./: .env.example  .gitignore  CLAUDE.md  DEVELOPMENT.md  Makefile  README.md  ReSA.md  SETUP.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: build.yml  deploy.yml  test.yml
apps/backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 20260414_0000_0001_initial.py  20260415_0312_c5b18111de93_add_ticket.py  20260415_1352_9779753c668e_add_assets_audit_logs_departments_.py  20260416_0716_743e2720b75d_add_attachments.py  20260416_0755_08009148274f_add_assets_users.py  20260421_0941_99cadff67b78_merge_multi_heads.py  20260421_0954_0c6ab12b5d94_sync_hsiu_and_yvonne_models.py  20260424_1512_a32c46b09076_add_2_columns_in_users.py  20260428_0703_be22246ccd33_enhance_audit_log_actor_name_target_.py  20260504_0516_6ca2a962c478_apply_indexing.py  20260514_1211_4385d7a8eef7_add_returned_status_reject_reason_.py  20260515_0000_2b3c4d5e6f7a_asset_deactivated_loaner.py  20260516_0000_c1d2e3f4a5b6_loaner_return_flow.py  20260516_0001_4e5f6a7b8c9d_move_location_to_user.py  20260516_0002_5f6a7b8c9d0e_add_office_locations.py  20260517_0000_6a7b8c9d0e1f_add_vendors.py  20260517_0001_7b8c9d0e1f2g_add_hire_termination_date_to_users.py  20260518_0001_8c9d0e1f2a3b_add_is_active_to_users.py  20260518_0002_9d0e1f2a3b4c_add_is_offboarding_to_asset_transfers.py  20260520_0746_e1258e5d49bf_make_relations_of_office_locations_and_.py  20260523_0000_f3a1b2c4d5e6_add_handled_by_to_repair_requests.py
apps/backend/scripts/: seed.py
apps/backend/src/app/: main.py
apps/backend/src/app/api/: assets.py  audit_logs.py  auth.py  deps.py  health.py  ticket.py  user.py  vendor.py
apps/backend/src/app/core/: audit.py  cache.py  celery_app.py  config.py  db.py  email.py  limiter.py  logging.py  request_logging.py  security.py  storage.py
apps/backend/src/app/models/: __init__.py  asset.py  audit_log.py  base.py  department.py  notification_preference.py  office_location.py  ticket.py  user.py  vendor.py
apps/backend/tests/: conftest.py  test_health.py  test_ticket_draft.py
apps/backend/tests/integration/: conftest.py  test_case.md  test_global_security.py  test_user_api.py
apps/backend/tests/load/: locustfile.py  setup.md
apps/backend/tests/unit/: conftest.py  test_api.md  test_assets_api.py  test_auth_api.py  test_db.py  test_ticket_api.py  test_user_logic.py  test_vendor_api.py
apps/backend/tests/utils/: __init__.py  asset.py  ticket.py  user.py  utils.py
apps/frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
docs/: api-frontend-flows.md  observability-dashboards.md
infra/docs/: README.md  step5-cicd.md  (+4 more)
(+147 files in other folders)
