[project]
name = "asset-backend"
version = "0.1.0"
description = "Asset Management backend (FastAPI)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0,<0.116",
    "uvicorn[standard]>=0.32.0,<0.33",
    "pydantic>=2.9.0,<3",
    "pydantic-settings>=2.6.0,<3",
    "sqlalchemy[asyncio]>=2.0.36,<2.1",
    "asyncmy>=0.2.10,<0.3",
    "pymysql>=1.1.1,<1.2",
    "alembic>=1.13.3,<1.14",
    "redis>=5.1.1,<6",
    "prometheus-fastapi-instrumentator>=7.0.0,<8",
    "python-multipart>=0.0.12,<0.1",
    "python-jose>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "celery[redis]>=5.4.0,<6",
]

[project.optional-dependencies]
# Cloud-only. Install with `uv sync --extra gcs` in the production image.
gcs = ["google-cloud-storage>=2.18.2,<3"]

[dependency-groups]
dev = [
    "pytest>=8.3.0,<9",
    "pytest-cov>=5.0.0,<6",
    "pytest-asyncio>=0.24.0,<0.25",
    "aiosqlite>=0.20.0,<0.21",
    "httpx>=0.27.0,<0.28",
    "ruff>=0.7.0,<0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.uv]
package = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=app --cov-report=term-missing --cov-report=xml:coverage.xml"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
